@@ -13,6 +13,31 @@
     <version>1.0.0</version>
   </parent>
 
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <junit.additionalArgLine>--add-modules java.xml.bind,java.activation</junit.additionalArgLine>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludes>
+                <exclude>nablarch.fw.jaxrs.integration.JaxRsIntegrationTest</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <dependencies>
 
     <dependency>
